fix: make sure page does not overflow unless necessary

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,13 @@ body {
     padding: 8px;
   }
 }
+
+.tab-custom-overflow .mat-tab-body-wrapper {
+  overflow: visible !important;
+}
+.tab-custom-overflow .mat-tab-body-active {
+  overflow: visible !important;
+}
+.tab-custom-overflow .mat-tab-body-content {
+  overflow: visible !important;
+}
